# Ninni_Robor_Arm

./: .gitignore  README.md  run_menu.sh  start_desktop.sh
docker/: Dockerfile
firmware/: platformio.ini
firmware/examples_archive/: bluebutton_test.cpp
firmware/src/: bluebutton_test.cpp  test_servo.cpp
install/: local_setup.sh  setup.sh
install/ninni_robot_arm/lib/ninni_robot_arm/: arm_rotator
install/ninni_robot_arm/share/ninni_robot_arm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ninni_robot_arm/share/ninni_robot_arm/cmake/: ninni_robot_armConfig.cmake
install/ninni_robot_arm/share/ninni_robot_arm/rviz/: arm_view.rviz
install/ninni_robot_arm/share/ninni_robot_arm/urdf/: ninni_robot_arm.urdf
log/: latest_build
ninni_robot_arm/: CMakeLists.txt  package.xml
ninni_robot_arm/rviz/: arm_view.rviz
ninni_robot_arm/src/: arm_rotator.cpp
ninni_robot_arm/src/camera_src/: camera_pub.py  cuda_cv_node.py  stm32_serial_node.py  yolo_detect_node.py
ninni_robot_arm/src/integrated_src/: gesture_control_node.py  yolo_detect_node.py
ninni_robot_arm/src/servo_src/: servo_bridge_node.py  servo_dance_test.py  servo_plotter_node.py
ninni_robot_arm/urdf/: ninni_robot_arm.urdf
