<?xml version="1.0"?>
<package format="3">
  <name>ninni_robot_arm</name>
  <version>0.0.1</version>
  <description>Ninni Robot Arm ROS2 package</description>
  <maintainer email="ninninrapat@gmail.com">ninnin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
